<?xml version="1.0"?>
<package format="3">
  <name>pi_ros2_interface</name>
  <version>0.0.1</version>
  <description>ROS 2 bridge for pi-protocol telemetry between Jetson and FC</description>
  <maintainer email="you@todo.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>quadrotor_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

